[SUI-22] Perpetual Creation + Misc Updates (#2)
* minor updates

* added faucet url

* added packages

* updated packages

* added keywords

* moved

* added create perpetual method

* updated structure

* class responsible for creating perpetuals

* list of on-chain errors

* methods copied from library

* handled shared ownership correctly

* added more methods

* added more tests

* added test wallets

* added build command

* updated with tests

* added keywords

* added set min price method

* updated with market deployment

* renamed to onchain calls

* config for deployment

* added min price error codes

* added more tests

* added test accounts to be used

* removed

Co-authored-by: YameenMalik <yameen@seed.im>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "cSpell.words": [
-        "bytecode"
+        "bignumber",
+        "bytecode",
+        "collateralization",
+        "keypair",
+        "mysten",
+        "nacl",
+        "PERP",
+        "Stdlib",
+        "tweetnacl"
     ]
 }
