--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
   },
   "dependencies": {
     "@mysten/sui.js": "^0.0.0-experimental-20221030022636",
-    "dotenv": "^16.0.3"
+    "add": "^2.0.6",
+    "avsc": "^5.7.6",
+    "bignumber.js": "^9.1.0",
+    "chai-as-promised": "^7.1.1",
+    "dotenv": "^16.0.3",
+    "ts-binary-serializer": "^2.1.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^10.0.0",
     "chai": "^4.3.6",
+    "mocha": "^10.1.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "scripts": {
+    "build": "sui move build --path firefly_exchange",
     "deploy": "ts-node ./scripts/deploy.ts",
     "debug": "ts-node ./scripts/debug.ts",
     "test": "ts-mocha --no-timeout tests/*.test.ts"
