--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bignumber.js": "^9.1.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
+    "lint-staged": "^13.0.3",
     "ts-binary-serializer": "^2.1.3",
     "yarn": "^1.22.19"
   },
@@ -21,6 +22,7 @@
     "@types/expect": "^24.3.0",
     "@types/mocha": "^10.0.0",
     "chai": "^4.3.6",
+    "husky": "^8.0.0",
     "mocha": "^10.1.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
@@ -30,7 +32,8 @@
     "build": "sui move build --path firefly_exchange",
     "deploy": "ts-node ./scripts/deploy.ts",
     "debug": "ts-node ./scripts/debug.ts",
-    "test": "ts-mocha --no-timeout tests/*.test.ts"
+    "test": "ts-mocha --no-timeout tests/*.test.ts",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -41,5 +44,9 @@
   "bugs": {
     "url": "https://github.com/fireflyprotocol/firefly-exchange-contracts-v2/issues"
   },
-  "homepage": "https://github.com/fireflyprotocol/firefly-exchange-contracts-v2#readme"
+  "homepage": "https://github.com/fireflyprotocol/firefly-exchange-contracts-v2#readme",
+  "lint-staged": {
+    "**/*.{js,ts,json}": "prettier --write",
+    "**/*.{js,ts}": "eslint --fix"
+  }
 }
