--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@mysten/sui.js": "^0.15.0",
+    "@noble/hashes": "^1.1.3",
     "add": "^2.0.6",
     "avsc": "^5.7.6",
     "bignumber.js": "^9.1.0",
@@ -49,4 +50,5 @@
     "**/*.{js,ts,json}": "prettier --write",
     "**/*.{js,ts}": "eslint --fix"
   }
+
 }
