--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "chai": "^4.3.6",
     "husky": "^8.0.0",
     "mocha": "^10.1.0",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
@@ -50,5 +52,4 @@
     "**/*.{js,ts,json}": "prettier --write",
     "**/*.{js,ts}": "eslint --fix"
   }
-
 }
