[MISC-FIXES] Settlement Operator, Orders and More (#14)
* added secp

* updated updateOperator

* commented out the test module

* added error 7/8

* updated tests

* converted address to secp from ed scheme

* created onchain object

* temporarily skipped tests

* moved transaction to classes

* added default order and create order method

* exported transaction class

* using default order from utils

* updated imports

* restructuring

* xit the test for now

* method rename

* removed unused var

* removed only

* updated verifier methods

* updated failing test

* added method for getting perpetual details

* Enable order signature tests and fixed secpk1 signature

Co-authored-by: YameenMalik <yameen@seed.im>
Co-authored-by: Shahzaib Sheikh <shahzaib4213@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
-    "cSpell.words": [
-        "bignumber",
-        "bytecode",
-        "collateralization",
-        "keypair",
-        "mysten",
-        "nacl",
-        "PERP",
-        "Stdlib",
-        "tweetnacl"
-    ]
+  "cSpell.words": [
+    "bignumber",
+    "bytecode",
+    "collateralization",
+    "keypair",
+    "mysten",
+    "nacl",
+    "PERP",
+    "Secp",
+    "Stdlib",
+    "tweetnacl"
+  ]
 }
