--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@mysten/sui.js": "^0.15.0",
     "@noble/hashes": "^1.1.3",
+    "@noble/secp256k1": "^1.7.0",
     "add": "^2.0.6",
     "avsc": "^5.7.6",
     "bignumber.js": "^9.1.0",
