[SUI-17] Trade Method (#27)
* in progress

* added 8/9 error code

* commented out code

* setup initial flow of trade

* added space

* better extract error

* added trade method

* minor updates

* in work

* Fixed issues with pk recoveer from signature

* added getEvent by name method

* added signature methods

* added getters and removed signature method

* minor updates

* updated getEvents method

* updated call to get events

* updated test

* added a test that should fail

* renamed variables

* [SUI-37] Myym/verify trade request (#20)

* added verify trade request method

* added getter methods

* add fund test account script

* updated how to run tests

* removed unused packages

* script to fund testing accounts

* lower camel cased all method names

* code restructure

* changed price to fill price

* made functions sync

* added more tests

* added leverage checks and test

* class for performing trades

* refactored tests to use trader class

Co-authored-by: YameenMalik <yameen@seed.im>

* Myym/verify trade request (#21)

* added verify trade request method

* added getter methods

* add fund test account script

* updated how to run tests

* removed unused packages

* script to fund testing accounts

* lower camel cased all method names

* code restructure

* changed price to fill price

* made functions sync

* added more tests

* added leverage checks and test

* class for performing trades

* refactored tests to use trader class

* added trade tests

Co-authored-by: YameenMalik <yameen@seed.im>

* added order quantity fill

* added test for order fills

* added over fill errors

* Fixed public key recover method to return address and verified that recover method is working fine

* updated ownership error

* updated secp

* removed unused verify signature method

* lowe camel cased method name

* lower camel cased method name

*

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
 # rpc url of the blockchain on which contracts are to be deployed
-RPC_URL = "http://127.0.0.1:9000" || "https://fullnode.devnet.sui.io" || https://sui-dev.firefly.exchange/
+DEPLOY_ON = local | cloud | devnet
 
-# url of the faucet
-FAUCET_URL = "https://sui-faucet-dev.firefly.exchange/"
-
-// Ed25519 key
-DEPLOYER_SEED = bicycle trim fit ticket penalty basket window tunnel insane orange virtual tennis
+// secp256k1 account seed
+DEPLOYER_SEED = royal reopen journey royal enlist vote core cluster shield slush hill sample
