Sui Update Fixes (#33)
* terminate if client call had an issue

* removed unused method

* fixed an error

* renamed to trade method

* added method to get two accounts

* added optional param

* updated cloud node url

* updated scripts and sui client version

* updated deployment command

* updated versions

* added words

* converted object to address

* minor updates

* minor updates

* updated ecdsa import

* moved to deploy folder

* script to publish market

* exported market from env

* client updates

* added user position

* added test position expect interface

* lower camel cases method names

* updated contract calls

* updated effects status path

* uncommented test

* updated imports

* added yargs and script

* updated how to run tests

* added pacakges

* script to fund a given account with sui

* converted status to string

* using sign and call method

* using getSignerSUIAddress method to extract taker address

* minor update

* exported Trader

* updated AliceBob to MakerTaker

* method to run tests

* added utils

* initial tests for trades

* removed extra line

---------

Co-authored-by: YameenMalik <yameen@seed.im>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@mysten/sui.js": "^0.15.0",
+    "@mysten/sui.js": "^0.26.1",
     "@noble/hashes": "^1.1.3",
     "@noble/secp256k1": "^1.7.0",
     "add": "^2.0.6",
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "lint-staged": "^13.0.3",
     "ts-binary-serializer": "^2.1.3",
+    "yargs": "^17.6.2",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -34,8 +35,10 @@
   },
   "scripts": {
     "build": "sui move build --path firefly_exchange",
-    "deploy": "ts-node ./scripts/deploy.ts",
-    "publish:package": "ts-node ./scripts/publish.ts",
+    "deploy:full": "ts-node ./scripts/deploy/full.ts",
+    "deploy:package": "ts-node ./scripts/deploy/package.ts",
+    "deploy:market": "ts-node ./scripts/deploy/market.ts",
+    "faucet": "ts-node ./scripts/faucet.ts",
     "debug": "ts-node ./scripts/debug.ts",
     "test": "ts-mocha --no-timeout tests/*.test.ts",
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
