--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "avsc",
     "bignumber",
     "bytecode",
     "collateralization",
@@ -10,6 +11,7 @@
     "PERP",
     "Secp",
     "Stdlib",
+    "subdir",
     "tweetnacl"
   ]
 }
