--- a/chain-events-listener/configs/events.json.example
+++ b/chain-events-listener/configs/events.json.example
@@ -7,6 +7,9 @@
             "OperatorUpdateEvent",
             "MinOrderPriceUpdateEvent",
             "AccountPositionUpdateEvent",
+            "MaxAllowedPriceDiffInOraclePriceUpdated",
+            "PriceOracleOperatorUpdatedEvent",
+            "OraclePriceUpdated"
         ]
     }
 ]
