--- a/bluefin_exchange/Move.toml
+++ b/bluefin_exchange/Move.toml
@@ -1,9 +1,9 @@
 [package]
-name = "firefly_exchange"
+name = "bluefin_exchange"
 version = "0.0.1"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
 
 [addresses]
-firefly_exchange =  "0x0"
+bluefin_exchange =  "0x0"
