[SUI-49] - Myym/trade without fee tests (#35)
* fixed error in oi open computation

* added to base number

* updated package name

* class to handle on chain balance

* minor updates

* converted isPosPositive type

* trade tests with out fee

* executor to run trade tests

* added expect position method

* added MarketConfig interface

* added expect, print and conversion methods

* removed unnecessary deployment

* updated test_deploy_market

* minor updates

* tests for trades pertaining to fee

* fixed incorrect fee division

* added price extraction method in price oracle

* added pre trade checks

* minor improvement

* moved post deployment added margin tests

* added to do

* added post deployment method

* tests with more loss than margin

* added oi open checks

* corrected minor bug

* stringified path

* added skip verification while publishing

* added price oracle update check

* updated comment

* mro error fix

* [SUI-43] Undercollat Checks (#37)

* added under collat errors

* added collat verification method after trade

* added method to compute margin ratio of a position

* added more mathematical methods

* margin ratio tests

* added expect for error

* exported expect

* imported post deployment method

* [SUI-53] Added Adust margin and Adjust Leverage Methods (#38)

* margin math module

* added average_entry_price method

* added more math methods

* added error codes for margin manipulation

* added errors for margin methods

* added add margin method

* added more errors

* added remove margin and adjust leverage methods

* removed unused method

* added margin calls

* handled add/remove margin

* tests for add/remove margin

* added margin bank errors

* inverted position size in tests

* adjust leverage tests

* removed .only

* added leverage adjustment

* corrected max margin removal maths

* removed debug event

* mi

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DEPLOYER_SEED = royal reopen journey royal enlist vote core cluster shield slush
 ## Optional parameters
 # provide if running `yarn deploy:market`, the provided market will be deployed
 MARKET = ETH-PERP
+
+## set to true to console log tx when running tests using `executor`
+DEBUG = false
