[SUI-62] - Deployment refactor (#40)
* renamed package from bluefin_exchange to bluefin_foundation

* renamed pacakge name

* refactored, moved common methods

* moved out interfaces, added module and package exports

* added create market and get deployment data method

* minor updates

* segregated interfaces

* refactoring util calls

* exported interfaces

---------

Co-authored-by: Ubuntu <ubuntu@ip-172-31-23-115.ec2.internal>

--- a/bluefin_foundation/Move.toml
+++ b/bluefin_foundation/Move.toml
@@ -1,9 +1,9 @@
 [package]
-name = "bluefin_exchange"
+name = "bluefin_foundation"
 version = "0.0.1"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
 
 [addresses]
-bluefin_exchange =  "0x0"
+bluefin_foundation =  "0x0"
