[SUI-16] Liquidation Trade (#43)
* added under collat

* added liquidation errors

* added accessor for tickSize

* minor refactor

* added round function

* method rename

* renamed variables + added pool percent and pool address

* updated methods

* added negative_number method

* liquidation contract

* code refactor, improvements

* file containing default values

* added liquidation errors

* added poolPercent, insurancePool

* minor refactoring

* added pool percent and pool address to perpetual creation

* added constants

* code refactor

* updated errors

* minor update

* added liquidate method

* added liquidatee

* added liquidate method + minor improvement

* minor updates

* added a random address

* updated error code

* updated quantity type

* minor improvements

* minor refactor

* added liquidation trade tests

* variable renaming

* minor updates

* renamed file

* variable rename + added max allowed fr and fee pool to perpetual

* moved marketConfig interface to src and renamed it

* added maxllowed fr and fee pool

* variable renaming

* updated import

* minor updates

* formatted

* liquidation trades tests

* fixed logical errors

* added signed number methods

* minor updates

* formatting + added liquidation trades handle logic

* added getPNL method

* removed .only

* removed unused qPos

* updated readme

---------

Co-authored-by: YameenMalik <yameen@seed.im>
Co-authored-by: Ubuntu <ubuntu@ip-172-31-23-115.ec2.internal>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,14 @@
     "collateralization",
     "devnet",
     "keypair",
+    "liquidatee",
     "mysten",
     "nacl",
     "PERP",
     "Secp",
     "Stdlib",
     "subdir",
-    "tweetnacl"
+    "tweetnacl",
+    "undercollateralized"
   ]
 }
