--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "bignumber.js": "^9.1.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
-    "lint-staged": "^13.0.3",
     "ts-binary-serializer": "^2.1.3",
     "yargs": "^17.6.2",
     "yarn": "^1.22.19"
@@ -24,14 +23,20 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "chai": "^4.3.6",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.0",
     "mocha": "^10.1.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "*"
   },
   "scripts": {
     "build": "sui move build --path bluefin_foundation --skip-fetch-latest-git-deps",
@@ -54,9 +59,5 @@
   "bugs": {
     "url": "https://github.com/fireflyprotocol/bluefin-exchange-contracts-sui/issues"
   },
-  "homepage": "https://github.com/fireflyprotocol/bluefin-exchange-contracts-sui#readme",
-  "lint-staged": {
-    "**/*.{js,ts,json}": "prettier --write",
-    "**/*.{js,ts}": "eslint --fix"
-  }
+  "homepage": "https://github.com/fireflyprotocol/bluefin-exchange-contracts-sui#readme"
 }
