[SUI-51] - ADL Trade (#47)
* error codes update with adl errors

* added deleveraging call

* resetting mro to zero when qPos is zero

* added gt_uint and lt_uint methods

* adl module

* comment and error code update

* updated errors

* added deleveraging method

* added zero sized maker test

* adl trade method tests

* renamed interface test account to account

* error rename and condition update

* filler trades are now called liq_filler trades

* added adl tests and updated executor to handle them

* removed debug flag

* corrected errors

* fixed failing cases

* added print position method to balance calss

* updated size to be positive

* updated failing test

* removed unsued debug

* Removed unused imports

* removed only

* minor update

* fixed lint issues

* ignored eslint cache file

* not needed to push cache file

* ignored debugebug file

* resolved lint warnings

---------

Co-authored-by: YameenMalik <yameen@seed.im>
Co-authored-by: Ubuntu <ubuntu@ip-172-31-23-115.ec2.internal>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "bluefin-exchange-contracts-sui",
   "description": "Repository containing Bluefin core exchange contracts that allow users to do on-chain derivatives trading on **SUI** blockchain.",
   "version": "1.0.0",
+  "scripts": {
+    "build": "sui move build --path bluefin_foundation --skip-fetch-latest-git-deps",
+    "deploy": "ts-node ./scripts/deploy/full.ts",
+    "deploy:package": "ts-node ./scripts/deploy/package.ts",
+    "deploy:market": "ts-node ./scripts/deploy/market.ts",
+    "faucet": "ts-node ./scripts/faucet.ts",
+    "debug": "ts-node ./scripts/debug.ts",
+    "test": "ts-mocha --no-timeout tests/*.test.ts",
+    "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
+    "prepare": "husky install",
+    "eslint:errors": "yarn eslint --fix --cache --max-warnings=-1 ."
+  },
   "directories": {
     "test": "tests"
   },
@@ -37,18 +49,6 @@
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "*"
-  },
-  "scripts": {
-    "build": "sui move build --path bluefin_foundation --skip-fetch-latest-git-deps",
-    "deploy": "ts-node ./scripts/deploy/full.ts",
-    "deploy:package": "ts-node ./scripts/deploy/package.ts",
-    "deploy:market": "ts-node ./scripts/deploy/market.ts",
-    "faucet": "ts-node ./scripts/faucet.ts",
-    "debug": "ts-node ./scripts/debug.ts",
-    "test": "ts-mocha --no-timeout tests/*.test.ts",
-    "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
-    "prepare": "husky install",
-    "eslint:errors": "yarn eslint --fix --max-warnings=-1 ."
   },
   "repository": {
     "type": "git",
