[SUI-66] - Margin Bank Integration (#58)
* added methods for margin transfer after trade

* integrated margin bank with all required methods

* added bank id to required on chain calls

* added ethers wallet

* added ethers wallet

* added mb error codes

* updated deposit method

* minor updates

* added more methods

* added handling of alice being taker

* updated tests

* minor updates

* added liquidator acconut

* updated evaluators

* updated deployment structure and added more helper methods

* removed unused method

* updated imports and function call

* updated failing cases

* funding all accounts with margin in before

* minor code optimization

* funding acconts

* misc fixes

* fixed funds flow error in flipping trade

* added more accounts

* cleaned accounts

* updated trade types, and call to execute test method

* ran lint and updated lint command

* funded temp taker account

* minor fixes

* fixed liquidator error

* removed console log

* reduced cat/dog margin to 5000

---------

Co-authored-by: YameenMalik <yameen@seed.im>
Co-authored-by: yameen@seed.im <ubuntu@ip-172-31-18-159.ec2.internal>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "ts-mocha --no-timeout tests/*.test.ts",
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
     "prepare": "husky install",
-    "eslint:errors": "yarn eslint --fix --cache --max-warnings=-1 ."
+    "lint": "yarn eslint --fix --cache --max-warnings=-1 ."
   },
   "directories": {
     "test": "tests"
@@ -26,6 +26,7 @@
     "bignumber.js": "^9.1.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
+    "ethereumjs-wallet": "^1.0.2",
     "ts-binary-serializer": "^2.1.3",
     "yargs": "^17.6.2",
     "yarn": "^1.22.19"
