--- a/.github/workflows/eslint-checks-pre-cd.yml
+++ b/.github/workflows/eslint-checks-pre-cd.yml
@@ -18,4 +18,4 @@ jobs:
       - name: install dependencies
         run: yarn
       - name: running ESLint
-        run: yarn eslint:errors
+        run: yarn lint
