--- a/.github/workflows/eslint-checks.yml
+++ b/.github/workflows/eslint-checks.yml
@@ -15,4 +15,4 @@ jobs:
       - name: install dependencies
         run: yarn
       - name: running ESLint
-        run: yarn eslint:errors
+        run: yarn lint
