[SUI-71] [SUI-72] User Roles and Friend Functions (#61)
* removed unused 104 error

* made methods friend

* funds flows are performed by exchange

* made methods friends of exchange module

* made mutable methods friend

* made methods entry and friends

* moved operator creation to roles module

* module responsible for creation  and maintenance of all operators

* made trade method friend and moved funds flow to exchange module

* tests for roles module

* renamed

* methods/events rename

* method rename

* added return

* refactoring

* removed examples

* init guardian cap on exchane init

* minor improvement

* only transfer fee if > 0

* fixed failing test

---------

Co-authored-by: YameenMalik <yameen@seed.im>
Co-authored-by: yameen@seed.im <ubuntu@ip-172-31-18-159.ec2.internal>

--- a/chain-events-listener/configs/events.json.example
+++ b/chain-events-listener/configs/events.json.example
@@ -4,12 +4,10 @@
         "module": "perpetual",
         "events": [
             "PerpetualCreationEvent",
-            "OperatorUpdateEvent",
+            "SettlementOperatorUpdateEvent",
             "MinOrderPriceUpdateEvent",
             "AccountPositionUpdateEvent",
-            "MaxAllowedPriceDiffInOraclePriceUpdated",
-            "PriceOracleOperatorUpdatedEvent",
-            "OraclePriceUpdated"
+            "OraclePriceUpdateEvent"
         ]
     }
 ]
