--- a/bluefin_foundation/Move.toml
+++ b/bluefin_foundation/Move.toml
@@ -3,7 +3,7 @@ name = "bluefin_foundation"
 version = "0.0.1"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework", rev = "devnet" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "testnet" }
 
 [addresses]
 bluefin_foundation =  "0x0"
