--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Repository containing Bluefin core exchange contracts that allow users to do on-chain derivatives trading on **SUI** blockchain.",
   "version": "0.1.0",
   "scripts": {
-    "build": "sui move build --path bluefin_foundation --skip-fetch-latest-git-deps",
+    "build": "ts-node ./scripts/build.ts",
     "deploy": "ts-node ./scripts/deploy/full.ts",
     "deploy:package": "ts-node ./scripts/deploy/package.ts",
     "deploy:market": "ts-node ./scripts/deploy/market.ts",
@@ -18,7 +18,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@mysten/sui.js": "^0.29.1",
+    "@mysten/sui.js": "^0.32.2",
     "@noble/hashes": "^1.2.0",
     "@noble/secp256k1": "^1.7.1",
     "add": "^2.0.6",
