--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy:market": "ts-node ./scripts/deploy/market.ts",
     "faucet": "ts-node ./scripts/faucet.ts",
     "debug": "ts-node ./scripts/debug.ts",
+    "make:trade": "ts-node ./scripts/makeTrade.ts",
     "test": "ts-mocha --no-timeout tests/*.test.ts",
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
     "prepare": "husky install",
