[SUI-42, SUI-54, SUI-55, SUI-56] Funding Rate (#64)
* added more errors

* be friends perpetual

* moved trade check methods to perpetual

* module for funding rate

* added funding rate + moved all trade check entry methods

* befriends perpetual

* added funding rate capability

* updated calls for trade checks setter to route to perpetual

* added funding index

* added funding rate errors

* added trade type method

* added funding rate methods

* added methods to get/set funding rate

* misc updates

* added apply_funding_rate method and integrated it with all methods

* moved fr functions to the end

* updated to conform to new sui version

* updated sui sdk

* added starting time to market

* bumped sui sdk

* bumped sui version

* updated dependencies

* updated transfer/signature calls

* updated sui imports and removed depricated types

* updated get object call

* updated to support new sig verificaiton

* updated new addresses

* updated zero address

* updated sign and call method

* updated order signer

* minor updates

* removed getAddressFromSigner method

* updated account addresses

* removed bcs data

* updated tests to pass

* updated comment

* updated pool addresses

* updated helper methods

* updatded helper methods

* added gas budget param to all on-chain calls

* updated error extraction methods

* updated tx response type

* updated tests

* coins require type along with id

* requesting gas in before/before each

* updated order signature methods

* minor updates

* updated tests

* Moved currency updation to util method

* updated account position extraction

* updated tests to work with 0.33 node

* updated event expectation

* minor updates

* minor update

* requesting sui tokens for admin before each test

* funding admin at the start of 1st test only

* minor updates

* updated buld command

* example updates

* sa

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "make:trade": "ts-node ./scripts/makeTrade.ts",
     "test": "ts-mocha --no-timeout tests/*.test.ts",
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
+    "make:trade": "ts-node ./scripts/makeTrade.ts",
     "prepare": "husky install",
     "make:trade": "ts-node ./scripts/makeTrade.ts",
     "create:settlement:operator": "ts-node ./scripts/settlementOperator.ts",
