[SUI-106] Chain Event Listener Update (#98)
* temp debug script to get all events

* updated examples

* updated to confirm to latest sui library

* updated start listener

* remove sui event type

* updated sui event type

* removed unused imports

* bumped version

* reset debug script

* not being used any more

---------

Co-authored-by: yameen@seed.im <ubuntu@ip-172-31-18-159.ec2.internal>

--- a/chain-events-listener/.env.example
+++ b/chain-events-listener/.env.example
@@ -4,12 +4,15 @@
 
 RPC_URL=http://127.0.0.1:9000
 
+### Optional ###
+
+# if AMQP_URI and CHANNEL is not provided, the events will be console logged
+
 # url of the rabbitmq
 AMQP_URI=amqp://localhost:5672
 
 # name of the channel on which events will be written in rabbitmq
 CHANNEL=events
 
-### Optional ###
 # trace|debug|info|warn|error|fatal
 LOG_LEVEL=info
