--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
     "prepare": "husky install",
     "create:settlement:operator": "ts-node ./scripts/settlementOperator.ts",
-    "lint": "yarn eslint --fix --cache --max-warnings=-1 ."
+    "lint": "yarn eslint --fix --cache --max-warnings=-1 .",
+    "format": "prettier --ignore-path .prettierignore --write \"**/*.+(js|ts|json)\""
   },
   "directories": {
     "test": "tests"
@@ -46,9 +47,10 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "prettier": "^2.8.2",
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
-    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
