Added imr/mmr update methods to Perpetual module (#110)
* added imr/mmr errors

* added methods to update imr/mmr

* updated imports

* added client class

* updated imports

* updated imports

* helpers for account creations

* bumped library

* added imr/mmr update tests

* added development mode

* updated imports

* updated type

* added publishPackage method

* bumped

* added perp address to OrderCancel event

* minor updates to imr/mmr tests

* bumped to main

* ignoring js files

* cel is moved to separate repo

---------

Co-authored-by: YameenMalik <yameen@seed.im>

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# development environment
+ENV = PROD | DEV
+
 # rpc url of the blockchain on which contracts are to be deployed
 DEPLOY_ON = local | cloud | devnet
 
