--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "submodules": "git submodule update --init --recursive",
     "build": "ts-node ./scripts/build.ts",
+    "deploy:pyth": "ts-node ./scripts/deploy/deployPythFake.ts",
     "deploy": "ts-node ./scripts/deploy/full.ts",
     "deploy:package": "ts-node ./scripts/deploy/package.ts",
     "deploy:market": "ts-node ./scripts/deploy/market.ts",
@@ -22,6 +23,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "@mysten/sui.js": "^0.34.0",
     "@noble/hashes": "^1.2.0",
     "@noble/secp256k1": "^1.7.1",
@@ -43,14 +45,14 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "chai": "^4.3.6",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "prettier": "^2.8.2",
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
+    "prettier": "^2.8.2",
     "pretty-quick": "^3.1.3",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
