--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy:pyth": "ts-node ./scripts/deploy/pythOracle.ts",
     "set:price": "ts-node ./scripts/updateOraclePrice.ts",
     "deploy": "ts-node ./scripts/deploy/full.ts",
+    "create:funding:operator": "ts-node ./scripts/fundingOperator.ts",
     "deploy:package": "ts-node ./scripts/deploy/package.ts",
     "deploy:market": "ts-node ./scripts/deploy/market.ts",
     "faucet": "ts-node ./scripts/faucet.ts",
@@ -25,9 +26,10 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@mysten/sui.js": "^0.34.0",
+    "@mysten/sui.js": "^0.37.1",
     "@noble/hashes": "^1.2.0",
     "@noble/secp256k1": "^1.7.1",
+    "@pythnetwork/pyth-sui-js": "^1.0.2",
     "add": "^2.0.6",
     "avsc": "^5.7.6",
     "bignumber.js": "^9.1.0",
