Contracts expect input numbers in 18 Base decimals (#129)
* updated pyth object file

* ignored files

* added pyth details

* added devnet and corrected localnet

* moved to pyth directory

* updated with correct path

* removed unused method

* updated pyth info file

* asserting funding rate

* added method to copy vector into 1e9 format

* converting 1e18 to 1e9

* updated priceInfoFeedId

* bumped

* updated to work with new oracle changes

* uncommented funding of accounts

* updated read file path

* return in case of fail

* corrected number bases

* corrected bases for oracle price

* removed getFileFromEnv method

* added import

* corrected failing cases

* percentage is converted to base 9

* delist price is converted to 1e9

* fixed failing cases

* bumped

* removed unused variable

* fixed signature mismatch bug

* updated base decimal

* run checks on ubuntu

* Update ci pipeline

---------

Co-authored-by: YameenMalik <yameen@seed.im>
Co-authored-by: yasir_ejaz <yasir@seed.im>

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky install",
     "create:settlement:operator": "ts-node ./scripts/settlementOperator.ts",
     "lint": "yarn eslint --fix --cache --max-warnings=-1 .",
+    "ci:code-style": "yarn eslint .",
     "format": "prettier --ignore-path .prettierignore --write \"**/*.+(js|ts|json)\""
   },
   "directories": {
