[Upgrade] - Funding Rate (#138)
* added upgrade pkg script

* minor improvements

* enriched build pkg method

* script to upgrade pkg

* bumped client

* upgrade guide

* storing hourly funding rate

* added comments

* added retries on fetching bank table

* bumped

---------

Co-authored-by: YameenMalik <yameen@seed.im>

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy:market": "ts-node ./scripts/deploy/market.ts",
     "faucet": "ts-node ./scripts/faucet.ts",
     "debug": "ts-node ./scripts/debug.ts",
+    "upgrade:pkg": "ts-node ./scripts/upgrade.ts",
     "make:trade": "ts-node ./scripts/makeTrade.ts",
     "test": "ts-mocha --no-timeout tests/*.test.ts",
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
