Contract Update: Shared Object Migration (#140)
* contract updates for v3 upgrade

* corrected hourly FR application logic

* started migration script

* completed methods of migration for this module

* added migration methods

* improvements

* migration script

* minor improvements

* fixed broken call

* removed unused const

* bumped to v3

* on perp migration moving old perp's balance as well.

* added bank to perp migration call

* Migrating Methods to support V2 objects (#141)

* updated create_perpetual method

* converted all methods to v2

* added sequencer struct

* created v2 validation methods

* created v2 methods

* converted methods to support v2 objects

* added check_delevearging_operator_validity_v2

* temp commit

* minor fix

* moved deleverage call to v2

* moved liquidations to v2

* updated normal trade to work with v2 objects

* updated set funding rate to work with V2 safe

* Added Version Checks (#142)

* added object version check in all entry methods

* code cleaning, removed unused imports, variables

* added migrate script

* Sequencer - Replay protection and Tx Ordering (#143)

* added sequencer to exchange module methods/events

* bumped version

* added tx_index to margin bank event

* added tx_index to all events

* moved special fee

* migrated to V2

* by default permitting trades on migrated perps

* updated init to create v2 objects

* updated migrate script to create sequencer and save ids in deployment file

* saving upgraded package id to deployment file

* improved code and creating sequencer on genesis

* bumped

* bumped to v3

* removed .only

* fixed oracle price set call

* creating sequencer on init

* fixed tests

* removed sequencer creation as its moved to genesis

* minor correction

* corrected script

* added comments

* bumped to main

* brought back v1 methods to support migration

* minor corrections

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bluefin-exchange-contracts-sui",
   "description": "Repository containing Bluefin core exchange contracts that allow users to do on-chain derivatives trading on **SUI** blockchain.",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "scripts": {
+    "migrate": "ts-node ./scripts/migrate.ts",
     "submodules": "git submodule update --init --recursive",
     "build": "ts-node ./scripts/build.ts",
     "deploy:pyth": "ts-node ./scripts/deploy/pythOracle.ts",
